<resources>
    <string name="app_name">myStudy</string>
    <string name="button_send"> go </string>
    <string name="button_Add"> Add Course </string>
    <string name="ChooseSemester">Choose Semester</string>
    <string name="editTextName">Course Name</string>
    <string name="editTextAssignmentName">Assignment Name</string>
    <string name="editTextTeacherName">Teacher</string>
    <string name="editTextDate">   </string>
    <string name="editTextEmail">Email</string>
    <string name="str_btn_set_alarm">Set Alarm</string>
    <string name="str_btn_quit">Quit</string>
    <string name="str_tv_message">Opened by Alarm</string>



    <string-array name="semester_array">
      <item>first semester</item>
        <item>second semester</item>

    </string-array>
    <string name="title_activity_demo" >alarm</string>

    <string name="title_activity_second">SecondActivity</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
        <string name="title_activity_third">ThirdActivity</string>
        <string name="title_activity_fourth">FourthActivity</string>
        <string name="title_activity_third_activity1">ThirdActivity1</string>
        <string name="title_activity_course_detail">CourseDetail</string>
        <string name="title_activity_main">MainActivity</string>
        <string name="title_activity_second_activity1">SecondActivity1</string>
        <string name="title_activity_demo_activity1">DemoActivity1</string>
        <string name="title_activity_course_detail1">CourseDetail1</string>
        <string name="title_activity_main_activity1">MainActivity1</string>
</resources>
