<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent" android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="com.example.toshiba.mystudy.CourseDetail"
    android:background="@mipmap/study2">



    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Save"
        android:id="@+id/btnSave"
        android:background="@color/background_material_dark"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnDelete"
        android:layout_toEndOf="@+id/btnDelete" />

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Close"
        android:id="@+id/btnClose"
        android:layout_alignParentBottom="true"
        android:layout_toRightOf="@+id/btnSave"
        android:layout_toEndOf="@+id/btnSave"
        android:background="@drawable/btn_selector"/>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Delete"
        android:id="@+id/btnDelete"

        android:layout_alignParentBottom="true"
        android:layout_toLeftOf="@+id/buttonDate"
        android:layout_toStartOf="@+id/buttonDate"
        android:background="@drawable/btn_selector"/>


    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextName"
        android:hint="@string/editTextName"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextAssignmentName"
        android:layout_below="@+id/editTextName"
        android:hint="@string/editTextAssignmentName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextTeacherName"
        android:layout_below="@+id/editTextAssignmentName"
        android:hint="@string/editTextTeacherName"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="43dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true" />

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextDate"
        android:hint="@string/editTextDate"
        android:layout_above="@+id/btnSave"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="103dp"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        android:visibility="invisible"/>

    <EditText
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editTextEmail"
        android:hint="@string/editTextEmail"
        android:layout_centerVertical="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentRight="true"
        android:layout_alignParentEnd="true"
        />
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="Date"
        android:id="@+id/buttonDate"
        android:onClick="onClick"
        android:layout_above="@+id/btnSave"
        android:layout_centerHorizontal="true"
        android:background="@drawable/btn_selector"
       />
    />

</RelativeLayout>
